--- a/2023/1030.md
+++ b/2023/1030.md
@@ -6,7 +6,7 @@
       j = i + 1
       while j < tag_num
         if tag_list[i] == tag_list[j]
-          binding.pry
+          <!--delete_at() の引数は0から始める-->
           tag_list.delete_at(j)
           tag_num = tag_list.count
           next
@@ -16,4 +16,3 @@
       i += 1
     end
     ----
-    
