--- a/2023/1101.md
+++ b/2023/1101.md
@@ -10,9 +10,7 @@
     繰り返し処理でコードの短縮を図り、表示日数の変更などにも対応できた。
     インスタンス変数の指定の仕方を変えて一つ一つのメソッドをコンパクトにしたい。
 
+・chatGPTにPythonの開発環境とフレームワークの導入手順について聞いてみた。試してみよう。
+
 
 ・寿司打　普通　お手軽コース
-  179回　2.7回/秒　5回
-  168回　2.7回/秒　3回
-  201回　3.1回/秒　7回
-  181回　2.8回/秒　13回
