--- a/2023/1107.md
+++ b/2023/1107.md
@@ -1,3 +1,103 @@
+10/30
+
+・スマホアプリ「Python入門」でPythonの基礎的な関数やアルゴリズムの学習
+・〃「アルゴリズム図鑑」でソート関連のアルゴリズム学習
+→覚えた関数を使ってポートフォリオのタグ付け機能改善(投稿タグ内で重複したものを判別し、削除する機能)
+    ----
+    while i < tag_num - 1
+      j = i + 1
+      while j < tag_num
+        if tag_list[i] == tag_list[j]
+          <!--delete_at() の引数は0から始める-->
+          tag_list.delete_at(j)
+          tag_num = tag_list.count
+          next
+        end
+        j += 1
+      end
+      i += 1
+    end
+    ----
+
+10/31
+
+・youtube動画でSES・SIer、自社開発会社の長所、短所について学ぶ。
+  現状どちらの良さもあり、考えを深める必要がある。
+
+・GEM、Robocopでポートフォリオのコード改善
+  # 日記機能のコードの冗長なところを修正中。
+    繰り返し処理でコードの短縮を図り、表示日数の変更などにも対応できるようにしたい。
+    インスタンス変数についてもっと理解を深めたい。
+  #不要な改行やスペースなどをオートコレクト
+
+・寿司打　普通　お手軽コース
+  179回　2.7回/秒　5回
+  168回　2.7回/秒　3回
+  201回　3.1回/秒　7回
+  181回　2.8回/秒　13回
+
+11/1
+
+・GitHub trendingでRuby関連のトレンドを確認。
+  #TheOdinProject => プログラミング教育プロジェクト的な？もの。いい使い方がありそう
+  #Ruby用のデバッグツール(名前忘れた)　=> pry-bybug的なやつかな？ちょっと違いを見ていけば勉強になるかも
+
+・はてなブックマークで地図アプリ？｢HERE WE GO｣について記事を見た。
+  GoogleMapに近いもののようだが、違いを比べて仕組みを勉強してみたい。要注目
+
+・GEM、Robocopでポートフォリオのコード改善
+  # 日記機能のコードの冗長なところを修正中。
+    繰り返し処理でコードの短縮を図り、表示日数の変更などにも対応できた。
+    インスタンス変数の指定の仕方を変えて一つ一つのメソッドをコンパクトにしたい。
+
+・chatGPTにPythonの開発環境とフレームワークの導入手順について聞いてみた。試してみよう。
+
+・寿司打　普通　お手軽コース
+
+11/2
+
+・検査業務にBluetooth通信のツールを作れないかアイデアを出していきたい。
+  #イヤホンに音声出力する疑似ワイヤレスブザーとか
+
+・Pythonの開発環境を導入してみた。ぼちぼち触っていってみる。
+
+・GEM、Robocopでポートフォリオのコード改善
+  # 日記機能のコードの冗長なところを修正中。
+
+・寿司打　普通　お手軽コース
+
+11/3
+
+・検査業務にBluetooth通信のツールを作れないかアイデアを出していきたい。
+  #イヤホンに音声出力する疑似ワイヤレスブザーとか
+
+・Kindleで「プリンシプルオブプログラミング」購入。休憩時間とかの暇つぶしに読んでいく。
+
+・GEM、Robocopでポートフォリオのコード改善
+  # 日記機能のコードの冗長なところを修正中。
+
+・寿司打　普通　お手軽コース
+
+11/5
+
+・「プリンシプルオブプログラミング」より、コーディングは設計工程にあたるという考え方は非常にしっくりきた。
+確かにデプロイまで行って初めて人目に触れることになるし、そうだなと。
+
+・今日は疲労がすごいので控えめで
+
+・寿司打　普通　お手軽コース
+167,2.7,7
+
+11/6
+
+・paizaでのCランク問題１問クリア。Cランクは基本的に外さなくなった。もっと素早く決めたい。
+
+・ポートフォリオ少し修正。細かいところ見るとまだ人に見せるのは恥ずかしくないかこれは。とはおもうが機能は改善している。
+
+・寿司打　普通　お手軽コース
+
+11/7
+
 ・paizaでのBランク問題１問クリア。Bランク昇格。何かの指標になるだろうか。
 
 ・忘れないうちにGoogleFontsの[Linefont][Wavefont]を取り入れたい旨メモしておく
@@ -5,3 +105,10 @@
 ・アプリ「Python&SQL」でSQLのデータベース操作について少し学習。いろんな手法のイメージができた
 
 ・寿司打　普通　お手軽コース
+
+11/8
+
+・paizaでのAランク問題１問挑戦。出力はあっているけどタイムアウトで60点。そういうところも影響してくるのか。重くならない処理は実務にもつながりそうなので学ぶべきか。
+
+・プリンシプルオブプログラミングを読み進めて思うこと。読みやすいコードがとても重要だというのはシーケンス回路を読むうえでも思うことがある。
+　コーディングは設計業務だという話への納得感が増す一方だと思う。
