--- a/2023/11.md
+++ b/2023/11.md
@@ -112,3 +112,19 @@
 
 ・プリンシプルオブプログラミングを読み進めて思うこと。読みやすいコードがとても重要だというのはシーケンス回路を読むうえでも思うことがある。
 　コーディングは設計業務だという話への納得感が増す一方だと思う。
+　
+11/9
+　
+・自炊日記の改善
+  マイページでフラッシュメッセージが表示された際にグラフが表示されなかった問題を解決。
+　  →現象発生時に開発者ツールでエラー確認。グラフが読み込まれていなかった。どうやら他のjsファイルを先に読み込むと読み込みができなくなるらしい。
+　  application.html.erbのscriptタグの前に読み込み用のタグを移動させた。とりあえずは解決。読まなくていいページでも読みだしたら処理が重くなったりするだろうか。
+　  
+　
+11/11
+・自炊日記の改善
+  グラフのテンプレート化や、メソッド重ね書きで読みづらいコードを関数を利用してシンプルに変更。
+  少しは読みやすくなったかと思う。
+・劇団の出欠管理アプリの案出し
+  簡単なワイヤーフレームを書き出す。あまり複雑にせず作っていこう。railsで一度作った後で同仕様のものをPythonかJavaで作る予定。
+  
